--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,24 @@ body {
   background-color: salmon;
 }
 
-ul{
-  display:inline-block;
-  margin-top: 2em;
+#Stores>div>h4{
+  font-weight:bold;
+  font-size: 1.5em
+}
+
+.store{
+  font-size: 1em;
+}
+
+img{
+  max-width: 150em;
+}
+
+p{
+  color: green;
+}
+
+#Additional>div>h4{
+  font-weight:bold;
+  font-size: 1.5em
 }
