--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,30 @@
-body {
-  background-color: salmon;
+body{
+  background-color: bisque;
+}
+
+header{
+  background-color: #444;
+  height: 100px;
+  color:seashell;
+}
+
+nav{
+  width: 960px;
+  margin: auto;
+}
+
+header>h1{
+  font-size: 500%;
+  font-style: oblique;
+  text-align: center;
+  color: seashell;
+}
+
+a {
+  color:seashell;
+  font-size: 130%;
+  font-style:normal;
+  margin-left: 30px;
 }
 
 #Stores>div>h4{
@@ -9,17 +34,30 @@ body {
 
 .store{
   font-size: 1em;
+  display: inline-block;
+  width: 300px;
+  height: 100px;
+  margin-top: 100px;
+  border: 2px solid black;
+  margin: 25px;
+  padding: 10px;
+  background-color: salmon;
 }
 
-img{
-  max-width: 150em;
+div{
+  border-width:5px;
 }
 
-p{
-  color: green;
+.center{
+  text-align: center;
 }
 
 #Additional>div>h4{
   font-weight:bold;
   font-size: 1.5em
+}
+
+.addInformation{
+  margin-top: 15px;
+  float: right;
 }
