--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ nav{
 
 header>h1{
   font-size: 500%;
-  font-style: oblique;
+  font-family: 'Noto Sans JP', sans-serif;
+font-family: 'PT Serif', serif;
   text-align: center;
   color: seashell;
 }
@@ -23,7 +24,7 @@ header>h1{
 a {
   color:seashell;
   font-size: 130%;
-  font-style:normal;
+  font-family: 'Noto Sans JP', sans-serif;
   margin-left: 30px;
 }
 
@@ -59,5 +60,33 @@ div{
 
 .addInformation{
   margin-top: 15px;
+  width: 50%;
+  float: left;
+  text-align: center;
+}
+
+
+.fishPhoto1{
+  float: left;
+  margin-top: 5%;
+  margin-left: 2%;
+}
+
+.fishPhoto2{
   float: right;
+  margin-top: 5%;
+  margin-right: 2%;
+}
+
+#cookie-stand{
+  margin: auto;
+  margin-top: 7%;
+  margin-left: 35%;
+  width: 30%;
+
+}
+
+table, th, td {
+  border: 1px solid black;
+  background-color: coral;
 }
